--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
     
-    <title>tawhid aslam</title>
-    <meta name="description" content="This is portfolio website of tawhid aslam">
+    <title>Devtawhid</title>
+    <meta name="description" content=" This is the portfolio website of Tawhidul islam">
 
     <!-- Web Fonts -->
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900'
@@ -115,7 +115,7 @@
                                 <div class="col-12 text-center">
                                     <div class="typed-strings">
                                         <p>I'm Tawhidul islam</p>
-                                        <p>I'm a web Developer</p>
+                                        <p>I'm a Web designer</p>
                                     </div>
                                     <p class="text-7 font-weight-500 text-white mb-2 mb-md-3">Welcome</p>
                                     <h2 class="text-16 font-weight-600 text-white mb-2 mb-md-3"><span
