--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <!-- Logo -->
                     <a href="index-2.html" class="mb-lg-auto mt-lg-4">
                         <span class="bg-dark-2 rounded-pill p-2 mb-lg-1 d-none d-lg-inline-block">
-                            <img class="img-fluid rounded-pill d-block" src="portfolio_asset/images/profile.jpg"
-                                title="I'm tawhid" alt="tawhid aslam">
+                            <img class="img-fluid rounded-pill d-block" src="portfolio_asset/images/devtawhid headshot.jpg"
+                                title="I'm Tawhid" alt="devtawhid">
                         </span>
                         <h1 class="text-5 text-white text-center mb-0 d-lg-block">Tawhid aslam</h1>
                     </a>
