Updated about section

--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
                         <div class="col-lg-8 text-center text-lg-left">
                             <h2 class="text-7 text-white font-weight-600 mb-3">I'm <span class="text-primary">Tawhidul
                                     islam,</span></h2>
-                            <p class="text-white-50">I'm a freelance web designer and front-end developer with 3 years of
-                                experience in web development. My expertise is to design and develop functional responsive websites. I've worked with many different organizations as freelance web developer .during this time I have developed so many websites using different tools and technologies. </p>
+                            <p class="text-white-50">I am a passionate web designer and WordPress developer. I love building websites that are functional and at the same time attractive. I am a self-taught web designer I started my journey in 2019, driven by my deep passion for web and technology. Over time, I have gathered so many experience by working with excellent team of developers in a professional environment. I have built around 300 WordPress websites, catering to various niches and requirements. My goal is to provide the best services through my skills and help others by making their dream websites.</p>
                         </div>
                         <div class="col-lg-4 mt-5 mt-lg-0">
                             <div class="pl-4">
@@ -163,7 +162,7 @@
                                     <li><span class="font-weight-600 mr-2">Name:</span>Tawhidul aslam</li>
                                     <li><span class="font-weight-600 mr-2">Email:</span><a
                                             href="mailto:towhid2302@gmail.com">towhid2302@gmail.com</a></li>
-                                    <li><span class="font-weight-600 mr-2">Age:</span>22</li>
+                                    <li><span class="font-weight-600 mr-2">Age:</span>23</li>
                                     <li class="border-0"><span class="font-weight-600 mr-2">From:</span>Chittagong,
                                         Bangladesh
                                     </li>
@@ -171,12 +170,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="brands-grid separator-border separator-border-light mt-5">
+                    <div class="brands-grid separator-border separator-border-light mt-2">
                         <div class="row">
                             <div class="col-6 col-md-4">
                                 <div class="featured-box text-center">
                                     <h4 class="text-12 text-white-50 mb-0"><span class="counter" data-from="0"
-                                            data-to="3">3</span>+
+                                            data-to="5">5</span>+
                                     </h4>
                                     <p class="text-light mb-0">Years Experience</p>
                                 </div>
@@ -191,7 +190,7 @@
                             <div class="col-6 col-md-4">
                                 <div class="featured-box text-center">
                                     <h4 class="text-12 text-white-50 mb-0"><span class="counter" data-from="0"
-                                            data-to="100">100</span>+</h4>
+                                            data-to="300">300</span>+</h4>
                                     <p class="text-light mb-0">Projects Done</p>
                                 </div>
                             </div>
@@ -224,16 +223,16 @@
                                     <div class="featured-box style-3 mb-5">
                                         <div class="featured-box-icon text-primary bg-dark-1 shadow-sm rounded"><i
                                                 class="fas fa-palette"></i></div>
-                                        <h3 class="text-white">Web design and Development</h3>
-                                        <p class="text-white-50 mb-0">Build Professional web application from scratch</p>
+                                        <h3 class="text-white">WordPress Website Development</h3>
+                                        <p class="text-white-50 mb-0">Transforming ideas into dynamic WordPress sites. I specialize in creating visually appealing and functional websites, ensuring a seamless online presence.</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="featured-box style-3 mb-5">
                                         <div class="featured-box-icon text-primary bg-dark-1 shadow-sm rounded"><i
                                                 class="fas fa-desktop"></i></div>
-                                        <h3 class="text-white">WordPress Development</h3>
-                                        <p class="text-white-50 mb-0">Develop Custom wordpress website using premium theme and plugins.
+                                        <h3 class="text-white">Front End Development </h3>
+                                        <p class="text-white-50 mb-0">I specialize in converting PSD/XD/FIGMA to HTML, ensuring pixel-perfect precision to establish a sleek design foundation, I have great skills in creating dynamic websites using JavaScript libraries like jQuery and React.
                                         </p>
                                     </div>
                                 </div>
@@ -241,16 +240,16 @@
                                     <div class="featured-box style-3 mb-5">
                                         <div class="featured-box-icon text-primary bg-dark-1 shadow-sm rounded"><i
                                                 class="fas fa-paint-brush"></i></div>
-                                        <h3 class="text-white">React application</h3>
-                                        <p class="text-white-50 mb-0">Build amazing functional website using react.js technology</p>
+                                        <h3 class="text-white">Website Performance Optimization</h3>
+                                        <p class="text-white-50 mb-0">I'm great at making websites super fast and efficient.I specialize in optimizing performance, ensuring visitors enjoy a smooth experience with quick loading times.</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="featured-box style-3 mb-5">
                                         <div class="featured-box-icon text-primary bg-dark-1 shadow-sm rounded"><i
                                                 class="fas fa-cogs"></i></div>
-                                        <h3 class="text-white">performance optimization </h3>
-                                        <p class="text-white-50 mb-0">increase performance of your website for better google ranking.</p>
+                                        <h3 class="text-white">Website QA Testing </h3>
+                                        <p class="text-white-50 mb-0">I specialize in Website QA Testing, ensuring error-free performance, responsive design, cohesive color branding, layout precision, SEO optimization, and global settings refinement for an impeccable online presence.</p>
                                     </div>
                                 </div>
 
