--- a/index.html
+++ b/index.html
@@ -588,25 +588,25 @@
                         <div class="col-md-6 col-xl-8 order-0 order-md-1">
                             <h2 class="mb-3 text-5 text-white text-uppercase text-center text-md-left">Send us a note
                             </h2>
-                            <p class="mb-3 text-3 text-white text-uppercase text-center text-md-left">Best way to contact me via Email or phone
+                            <p class="mb-3 text-3 text-white text-center text-md-left">Best way to contact me via Email or phone
                             </p>
-                            <form action="https://formsubmit.co/towhid2302@gmail.com" method="POST" id="contact-form" class="form-dark" >
+                            <form action="https://formspree.io/f/towhid2302@gmail.com" method="POST" id="contact-form" class="form-dark" >
                                 <div class="row">
                                     <div class="col-xl-6">
                                         <div class="form-group">
-                                            <input name="Name" type="text" class="form-control" required
+                                            <input name="name" type="text" class="form-control" required
                                                 placeholder="Name">
                                         </div>
                                     </div>
                                     <div class="col-xl-6">
                                         <div class="form-group">
-                                            <input name="email" type="Email" class="form-control" required
+                                            <input name="email" type="email" class="form-control" required
                                                 placeholder="Email">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <textarea  name="Message" class="form-control" rows="5" required
+                                    <textarea  name="message" class="form-control" rows="5" required
                                         placeholder="Type Your Message"></textarea>
                                 </div>
                                 <p class="text-center mt-4 mb-0">
