--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
     
-    <title>Devtawhid</title>
+    <title>Tawhidul islam</title>
     <meta name="description" content=" This is the portfolio website of Tawhidul islam">
 
     <!-- Web Fonts -->
@@ -61,7 +61,7 @@
                             <img class="img-fluid rounded-pill d-block" src="portfolio_asset/images/devtawhid headshot.jpg"
                                 title="I'm Tawhid" alt="devtawhid">
                         </span>
-                        <h1 class="text-5 text-white text-center mb-0 d-lg-block">Tawhidul Islam</h1>
+                        <h1 class="text-5 text-white text-center mb-0 d-lg-block logo-main">Tawhidul Islam</h1>
                     </a>
                     <!-- Logo End -->
 
@@ -156,7 +156,7 @@
                                     islam</span></h2>
                             <p class="text-white-50">I am a passionate web designer and WordPress developer. I love building websites that are functional and at the same time attractive. I am a self-taught web designer I started my journey in 2019, driven by my deep passion for web and technology. Over time, I have gathered so many experience by working with excellent team of developers in a professional environment. I have built around 300 WordPress websites, catering to various niches and requirements. My goal is to provide the best services through my skills and help others by making their dream websites.</p>
                         </div>
-                        <div class="col-lg-4 mt-5 mt-lg-0">
+                        <div class="col-lg-4 mt-3 mt-lg-0">
                             <div class="pl-4">
                                 <ul class="list-style-2 list-style-light text-light">
                                     <li><span class="font-weight-600 mr-2">Name:</span>Tawhidul aslam</li>
@@ -194,7 +194,7 @@
                         <div class="col-lg-11 mx-auto">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <div class="featured-box style-3 mb-5">
+                                    <div class="featured-box style-3 mb-4">
                                         <div class="featured-box-icon text-primary bg-dark-1 shadow-sm rounded"><i
                                                 class="fas fa-palette"></i></div>
                                         <h3 class="text-white">WordPress Website Development</h3>
@@ -202,7 +202,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="featured-box style-3 mb-5">
+                                    <div class="featured-box style-3 mb-4">
                                         <div class="featured-box-icon text-primary bg-dark-1 shadow-sm rounded"><i
                                                 class="fas fa-desktop"></i></div>
                                         <h3 class="text-white">Front End Development </h3>
@@ -211,7 +211,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="featured-box style-3">
+                                    <div class="featured-box style-3 mb-4">
                                         <div class="featured-box-icon text-primary bg-dark-1 shadow-sm rounded"><i
                                                 class="fas fa-paint-brush"></i></div>
                                         <h3 class="text-white">Website Performance Optimization</h3>
@@ -219,7 +219,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="featured-box style-3">
+                                    <div class="featured-box style-3 mb-4">
                                         <div class="featured-box-icon text-primary bg-dark-1 shadow-sm rounded"><i
                                                 class="fas fa-cogs"></i></div>
                                         <h3 class="text-white">Website QA Testing </h3>
@@ -252,7 +252,7 @@
                     <div class="row">
                         <!-- My Education -->
                         <div class="col-md-6">
-                            <div class="border border-dark rounded p-4">
+                            <div class="border border-dark rounded p-4 mb-4">
                                 <p class="badge badge-danger text-2 font-weight-400">2021 - 2022</p>
                                 <h3 class="text-5 text-white">Front End Developer (Remote)</h3>
                                 <p class="text-primary"> At Oyolloo</p>
@@ -262,7 +262,7 @@
 
                         <div class="col-md-6">
 
-                            <div class="border border-dark rounded p-4">
+                            <div class="border border-dark rounded p-4 mb-4">
                                 <p class="badge badge-danger text-2 font-weight-400">2022 - 2024</p>
                                 <h3 class="text-5 text-white">Web Designer and WordPress Developer</h3>
                                 <p class="text-primary">Attractive UI (Remote)</p>
@@ -590,29 +590,33 @@
                             </h2>
                             <p class="mb-3 text-3 text-white text-center text-md-left">Best way to contact me via Email or phone
                             </p>
-                            <form action="https://formspree.io/f/towhid2302@gmail.com" method="POST" id="contact-form" class="form-dark" >
+                            <form action="https://api.web3forms.com/submit" method="POST"  class="form-dark" >
+
+                                <input type="hidden" name="access_key" value="14e62ac4-c809-4bdd-b35b-c7d5819c9584">
                                 <div class="row">
                                     <div class="col-xl-6">
                                         <div class="form-group">
-                                            <input name="name" type="text" class="form-control" required
+                                            <input name="name" type="text" class="form-control" 
                                                 placeholder="Name">
                                         </div>
                                     </div>
                                     <div class="col-xl-6">
                                         <div class="form-group">
-                                            <input name="email" type="email" class="form-control" required
+                                            <input name="email" type="email" class="form-control" 
                                                 placeholder="Email">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <textarea  name="message" class="form-control" rows="5" required
+                                    <textarea  name="message" class="form-control" rows="5" 
                                         placeholder="Type Your Message"></textarea>
                                 </div>
+                                <div class="h-captcha" data-captcha="true"></div>
                                 <p class="text-center mt-4 mb-0">
                                     <button id="submit-btn" class="btn btn-primary rounded-pill d-inline-flex"
                                         type="submit">Send Message
                                     </button>
+        
                                 </p>
                             </form>
                         </div>
