--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                             <li class="nav-item"><a class="nav-link smooth-scroll active" href="#home">Home</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About Me</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#services">What I Do</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#resume">Resume</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skill</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#testimonial">Testimonial</a>
                             </li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
                         </ul>
@@ -236,7 +236,7 @@
 
             <!-- Resume
         ============================================= -->
-            <section id="resume" class="section bg-dark-1">
+            <section id="experience" class="section bg-dark-1">
                 <div class="container px-lg-5">
                     <!-- Heading -->
                     <div class="position-relative d-flex text-center mb-3">
@@ -249,25 +249,20 @@
                     </div>
                     <!-- Heading end-->
 
-                    <div class="row">
+                    <div class="row p-3">
                         <!-- My Education -->
-                        <div class="col-md-6">
-                            <div class="border border-dark rounded p-4 mb-4">
+                        <div class="col-md-6  border border-dark rounded  p-4 ">
                                 <p class="badge badge-danger text-2 font-weight-400">2021 - 2022</p>
                                 <h3 class="text-5 text-white">Front End Developer (Remote)</h3>
                                 <p class="text-primary"> At Oyolloo</p>
-                            </div>
-
+                                <p class="text-white">My role was to convert PSD/XD/Figma designs to HTML and create Responsive WordPress websites using different themes and plugins.</p>
                         </div>
 
-                        <div class="col-md-6">
-
-                            <div class="border border-dark rounded p-4 mb-4">
+                        <div class="col-md-6 border border-dark rounded p-4">
                                 <p class="badge badge-danger text-2 font-weight-400">2022 - 2024</p>
-                                <h3 class="text-5 text-white">Web Designer and WordPress Developer</h3>
-                                <p class="text-primary">Attractive UI (Remote)</p>
-                            </div>
-
+                                <h3 class="text-5 text-white">WordPress Designer/Developer (Remote)</h3>
+                                <p class="text-primary">At Attractive UI</p>
+                                <p class="text-white">My role is to build a complete website from scratch, starting from converting complex designs to finishing the project. This includes QA testing, on-site SEO, and performance optimization.</p>
                         </div>
 
                         <!-- My Experience -->
@@ -282,11 +277,11 @@
 
              <!-- Skills
         ============================================= -->
-        <section id="resume" class="section bg-dark-2">
+        <section id="skill" class="section bg-dark-2">
             <div class="container px-lg-5">
                 <!-- Heading -->
                 <div class="position-relative d-flex text-center mb-3">
-                    <h2 class="text-24 text-muted opacity-1 text-uppercase font-weight-600 w-100 mb-0">Summary</h2>
+                    <h2 class="text-24 text-muted opacity-1 text-uppercase font-weight-600 w-100 mb-0">Expertise </h2>
                     <p
                         class="text-9 text-white font-weight-600 position-absolute w-100 align-self-center line-height-4 mb-0">
                         Skills<span
