--- a/index.html
+++ b/index.html
@@ -78,17 +78,12 @@
                         </ul>
                     </div>
                     <ul class="social-icons social-icons-muted social-icons-sm mt-lg-auto ml-auto ml-lg-0 mb-n1 d-flex">
-                        <li class="social-icons-facebook"><a data-toggle="tooltip" href="#" target="_blank" title=""
+                        <li class="social-icons-linkedin"><a data-toggle="tooltip" href="https://www.linkedin.com/in/devtawhid/" target="_blank" title=""
                                 data-original-title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
-                        <li class="social-icons-facebook"><a data-toggle="tooltip"
-                                href="https://www.facebook.com/devtawhid/" target="_blank" title=""
-                                data-original-title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-                        <li class="social-icons-github"><a data-toggle="tooltip" href="https://github.com/tawhidaslam/"
+                        <li class="social-icons-github"><a data-toggle="tooltip" href="https://github.com/dev-tawhid"
                                 target="_blank" title="" data-original-title="GitHub"><i class="fab fa-github"></i></a>
                         </li>
-                        <li class="social-icons-twitter"><a data-toggle="tooltip"
-                                href="https://twitter.com/tawhidaslam_" target="_blank" title=""
-                                data-original-title="Twitter"><i class="fab fa-twitter"></i></a></li>
+
                     </ul>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#header-nav">
                         <span></span><span></span><span></span></button>
