--- a/index.html
+++ b/index.html
@@ -558,19 +558,13 @@
                             <h2 class="mb-3 text-5 text-white text-uppercase">Follow Me</h2>
                             <ul
                                 class="social-icons social-icons-muted ml-md-n2 justify-content-center justify-content-md-start">
-                                <li class="social-icons-dribbble"><a data-toggle="tooltip"
+                                <li class="social-icons-linkedin"><a data-toggle="tooltip"
                                         href="https://www.linkedin.com/in/devtawhid/" target="_blank" title=""
                                         data-original-title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
-                                <li class="social-icons-facebook"><a data-toggle="tooltip"
-                                        href="https://www.facebook.com/devtawhid/" target="_blank" title=""
-                                        data-original-title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+                              
                                 <li class="social-icons-github"><a data-toggle="tooltip"
-                                        href="https://github.com/tawhidpro" target="_blank" title=""
+                                        href="https://github.com/dev-tawhid" target="_blank" title=""
                                         data-original-title="GitHub"><i class="fab fa-github"></i></a></li>
-
-                                <li class="social-icons-twitter"><a data-toggle="tooltip" href="https://twitter.com/devtawhid"
-                                        target="_blank" title="" data-original-title="Twitter"><i
-                                            class="fab fa-twitter"></i></a></li>
                                
                             </ul>
 
