--- a/index.html
+++ b/index.html
@@ -580,19 +580,19 @@
                                 <div class="row">
                                     <div class="col-xl-6">
                                         <div class="form-group">
-                                            <input name="name" type="text" class="form-control" 
+                                            <input required name="name" type="text" class="form-control" 
                                                 placeholder="Name">
                                         </div>
                                     </div>
                                     <div class="col-xl-6">
                                         <div class="form-group">
-                                            <input name="email" type="email" class="form-control" 
+                                            <input required name="email" type="email" class="form-control" 
                                                 placeholder="Email">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <textarea  name="message" class="form-control" rows="5" 
+                                    <textarea required name="message" class="form-control" rows="5" 
                                         placeholder="Type Your Message"></textarea>
                                 </div>
                                 <div class="h-captcha" data-captcha="true"></div>
