update info text

--- a/index.html
+++ b/index.html
@@ -427,8 +427,6 @@
                                 </div>
                             </div>
 
-                           
-
                     <!-- Portfolio  -->
 
                 
@@ -454,7 +452,7 @@
                     </div>
 
                     <div>
-                        <p class="portfolio-note">For client privacy reasons, I'm unable to share specific project details like live links, tools used, or confidential information. these mockups represent some of the websites I've built recently. If you're interested in learning more or would like a consultation, please feel free to get in touch!</p>
+                        <p class="portfolio-note">For client privacy reasons, I'm unable to share specific project details like live links, tools used, or confidential information. these mockups represent some of the websites I've built recently. If you're interested in learning more or would like a consultation, please feel free to <a href="#contact">get in touch!</a></p>
                     </div>
                 </div>
             </section>
